feat: add basic authentication
