# src/auth/dto/login.dto.ts
@@ -1,0 +1,20 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class LoginDto {
+  @ApiProperty({
+    description: 'The user login/username',
+    example: 'newUserLogin',
+  })
+  @IsString()
+  @IsNotEmpty()
+  login: string;
+
+  @ApiProperty({
+    description: 'The user password ',
+    example: 'P@ssw0rd123!',
+  })
+  @IsString()
+  @IsNotEmpty()
+  password: string;
+}
